using the roof angle and the roof type to compute FSI and for the export