@@ -84,183 +84,188 @@ import fr.ign.cogit.geoxygene.util.conversion.ShapefileReader;
 
 public class ExportAsCityGML {
     private static IdCreator idCreator;
-        private static GeometryFactory factory;
-    
-        private static Envelope getEnvelope(IEnvelope inputEnvelope, double minHeight, double maxHeight) {
-            Envelope envelope = new Envelope();
-            DirectPosition lowerCorner = new DirectPosition();
-            lowerCorner.setValue(Arrays.asList(inputEnvelope.minX(), inputEnvelope.minY(), minHeight));
-            envelope.setLowerCorner(lowerCorner);
-            DirectPosition upperCorner = new DirectPosition();
-            upperCorner.setValue(Arrays.asList(inputEnvelope.maxX(), inputEnvelope.maxY(), maxHeight));
-            envelope.setUpperCorner(upperCorner);
-            envelope.setSrsDimension(3);
-            envelope.setSrsName("EPSG:25832");
-            return envelope;
+    private static GeometryFactory factory;
+    private static double roofAngle = Math.PI / 4;
+
+    private static Envelope getEnvelope(IEnvelope inputEnvelope, double minHeight, double maxHeight) {
+        Envelope envelope = new Envelope();
+        DirectPosition lowerCorner = new DirectPosition();
+        lowerCorner.setValue(Arrays.asList(inputEnvelope.minX(), inputEnvelope.minY(), minHeight));
+        envelope.setLowerCorner(lowerCorner);
+        DirectPosition upperCorner = new DirectPosition();
+        upperCorner.setValue(Arrays.asList(inputEnvelope.maxX(), inputEnvelope.maxY(), maxHeight));
+        envelope.setUpperCorner(upperCorner);
+        envelope.setSrsDimension(3);
+        envelope.setSrsName("EPSG:25832");
+        return envelope;
+    }
+
+    public static ILineString longestEdge(IDirectPositionList dpl) {
+        int nbPoints = dpl.size();
+        dpl.remove(nbPoints - 1);
+        List<fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition> lC = dpl.stream()
+                .map(p -> new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(p.getX(), p.getY(), 0)).toList();
+        return IntStream.range(0, lC.size())
+                .mapToObj(i -> new GM_LineString(lC.get(i), lC.get((i + 1) % lC.size())))
+                .max((l1, l2) -> Double.compare(l1.length(), l2.length())).get();
+    }
+
+    public static List<Edge> fromDPLToEdges(IDirectPositionList dpl) {
+        int nbPoints = dpl.size();
+        dpl.remove(nbPoints - 1);
+        List<Corner> lC = dpl.stream().map(p -> new Corner(p.getX(), p.getY(), 0)).toList();
+        return IntStream.range(0, lC.size())
+                .mapToObj(i -> new Edge(lC.get(i), lC.get((i + 1) % lC.size())))// , (i % 2 == 0) ? 0 : Math.PI / 4))
+                .toList();
+    }
+
+    private static IDirectPositionList convertLoopCorner(Loop<Point3d> lC) {
+        return new DirectPositionList(
+                new ArrayList<>(lC.stream()
+                        .map(c -> (IDirectPosition) new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(c.x,
+                                c.y, c.z))
+                        .toList()));
+    }
+
+    private static LineSegment edgeToLineSegment(Edge e) {
+        return new LineSegment(new Coordinate(e.start.x, e.start.y), new Coordinate(e.end.x, e.end.y));
+    }
+
+    private static LineSegment lineStringToLineSegment(ILineString l) {
+        return new LineSegment(
+                new Coordinate(l.getControlPoint(0).getX(), l.getControlPoint(0).getY()),
+                new Coordinate(l.getControlPoint(l.sizeControlPoint() - 1).getX(),
+                        l.getControlPoint(l.sizeControlPoint() - 1).getY()));
+    }
+
+    private static boolean perpendicular(double a) {
+        // System.out.println("angle in " + a);
+        // make sure the angle is between -PI and PI
+        double angle = (a < -Math.PI) ? a + 2 * Math.PI : (a > Math.PI) ? a - 2 * Math.PI : a;
+        // System.out.println("angle norm " + angle);
+        // perpendicular enough if angle is between PI/4 and 3PI/4
+        return Math.abs(angle) > Math.PI / 4 && Math.abs(angle) < 3 * Math.PI / 4;
+    }
+
+    private static List<IOrientableSurface> getGableRoof(IOrientableSurface surface, ILineString edge) {
+        LoopL<Edge> input = new LoopL<Edge>();
+        IRing rExt = ((IPolygon) surface).getExterior();
+        IDirectPositionList points = rExt.coord();
+        PlanEquation pe = new ApproximatedPlanEquation(points);
+        Vecteur normal = pe.getNormale().getNormalised();
+        if (normal.getZ() < 0) {
+            System.err.println("reverse roof");
+            points = points.reverse();
         }
-    
-        public static ILineString longestEdge(IDirectPositionList dpl) {
-            int nbPoints = dpl.size();
-            dpl.remove(nbPoints - 1);
-            List<fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition> lC = dpl.stream()
-                    .map(p -> new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(p.getX(), p.getY(), 0)).toList();
-            return IntStream.range(0, lC.size())
-                    .mapToObj(i -> new GM_LineString(lC.get(i), lC.get((i + 1) % lC.size())))
-                    .max((l1, l2) -> Double.compare(l1.length(), l2.length())).get();
-        }
-    
-        public static List<Edge> fromDPLToEdges(IDirectPositionList dpl) {
-            int nbPoints = dpl.size();
-            dpl.remove(nbPoints - 1);
-            List<Corner> lC = dpl.stream().map(p -> new Corner(p.getX(), p.getY(), 0)).toList();
-            return IntStream.range(0, lC.size())
-                    .mapToObj(i -> new Edge(lC.get(i), lC.get((i + 1) % lC.size())))// , (i % 2 == 0) ? 0 : Math.PI / 4))
-                    .toList();
-        }
-    
-        private static IDirectPositionList convertLoopCorner(Loop<Point3d> lC) {
-            return new DirectPositionList(
-                    new ArrayList<>(lC.stream()
-                            .map(c -> (IDirectPosition) new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(c.x,
-                                    c.y, c.z))
-                            .toList()));
-        }
-    
-        private static LineSegment edgeToLineSegment(Edge e) {
-            return new LineSegment(new Coordinate(e.start.x, e.start.y), new Coordinate(e.end.x, e.end.y));
-        }
-    
-        private static LineSegment lineStringToLineSegment(ILineString l) {
-            return new LineSegment(
-                    new Coordinate(l.getControlPoint(0).getX(), l.getControlPoint(0).getY()),
-                    new Coordinate(l.getControlPoint(l.sizeControlPoint() - 1).getX(),
-                            l.getControlPoint(l.sizeControlPoint() - 1).getY()));
-        }
-    
-        private static boolean perpendicular(double a) {
-            // System.out.println("angle in " + a);
-            // make sure the angle is between -PI and PI
-            double angle = (a < -Math.PI) ? a + 2 * Math.PI : (a > Math.PI) ? a - 2 * Math.PI : a;
-            // System.out.println("angle norm " + angle);
-            // perpendicular enough if angle is between PI/4 and 3PI/4
-            return Math.abs(angle) > Math.PI / 4 && Math.abs(angle) < 3 * Math.PI / 4;
-        }
-    
-        private static List<IOrientableSurface> getGableRoof(IOrientableSurface surface, ILineString edge) {
-            LoopL<Edge> input = new LoopL<Edge>();
-            IRing rExt = ((IPolygon) surface).getExterior();
-            IDirectPositionList points = rExt.coord();
-            PlanEquation pe = new ApproximatedPlanEquation(points);
-            Vecteur normal = pe.getNormale().getNormalised();
-            if (normal.getZ() < 0) {
-                System.err.println("reverse roof");
-                points = points.reverse();
-            }
-            double height = rExt.coord().get(0).getZ();
-            List<Edge> lEExt = fromDPLToEdges(points);
-            LineSegment segment = lineStringToLineSegment(edge);
-            // determine wich edges are perpendicular to the longest edges
-            // TODO check if they are end edges too? (perpendicular to previous and next
-            // edge)
-            lEExt.forEach(e -> e.setAngle(perpendicular(edgeToLineSegment(e).angle() - segment.angle()) ? 0 : Math.PI / 4));
-            // lEExt.forEach(e->System.err.println("machineangle " + e.getAngle()));
-            Loop<Edge> loop = new Loop<Edge>(lEExt);
-            lEExt.forEach(e -> e.machine = new Machine(e.getAngle()));
-            input.add(loop);
-            Skeleton s = new Skeleton(input, true);
-            s.skeleton();
-            return s.output.faces.values().stream().map(f -> {
-                System.err.println("face = " + f.pointCount() + " with height " + height);
-                IPolygon poly = new GM_Polygon();
-                for (Loop<Point3d> lP : f.points) {
-                    IDirectPositionList dpl = convertLoopCorner(lP);
-                    // System.err.println("dpl 1 =\n" + dpl);
-                    // add height
-                    dpl.stream().forEach(p -> p.setZ(p.getZ() + height));
-                    // make sure the face is closed
-                    dpl.add(dpl.get(0));
-                    dpl.reverse();//???
-                    // System.err.println("dpl 2 =\n" + dpl);
-                    if (poly.getExterior() == null) {
-                        poly.setExterior(new GM_Ring(new GM_LineString(dpl)));
-                    } else {
-                        poly.addInterior(new GM_Ring(new GM_LineString(dpl)));
-                    }
+        double height = rExt.coord().get(0).getZ();
+        List<Edge> lEExt = fromDPLToEdges(points);
+        LineSegment segment = lineStringToLineSegment(edge);
+        // determine wich edges are perpendicular to the longest edges
+        // TODO check if they are end edges too? (perpendicular to previous and next
+        // edge)
+        lEExt.forEach(e -> e.setAngle(perpendicular(edgeToLineSegment(e).angle() - segment.angle()) ? 0 : roofAngle));
+        // lEExt.forEach(e->System.err.println("machineangle " + e.getAngle()));
+        Loop<Edge> loop = new Loop<Edge>(lEExt);
+        lEExt.forEach(e -> e.machine = new Machine(e.getAngle()));
+        input.add(loop);
+        Skeleton s = new Skeleton(input, true);
+        s.skeleton();
+        return s.output.faces.values().stream().map(f -> {
+            System.err.println("face = " + f.pointCount() + " with height " + height);
+            IPolygon poly = new GM_Polygon();
+            for (Loop<Point3d> lP : f.points) {
+                IDirectPositionList dpl = convertLoopCorner(lP);
+                // System.err.println("dpl 1 =\n" + dpl);
+                // add height
+                dpl.stream().forEach(p -> p.setZ(p.getZ() + height));
+                // make sure the face is closed
+                dpl.add(dpl.get(0));
+                dpl.reverse();// ???
+                // System.err.println("dpl 2 =\n" + dpl);
+                if (poly.getExterior() == null) {
+                    poly.setExterior(new GM_Ring(new GM_LineString(dpl)));
+                } else {
+                    poly.addInterior(new GM_Ring(new GM_LineString(dpl)));
                 }
-                // System.err.println("polygon = " + poly);
-                return (IOrientableSurface) poly;
-            }).toList();
-        }
-    
-        private static double averageHeight(GM_Polygon p) {
-            List<IDirectPosition> list = p.getExterior().coord().getList();
+            }
+            // System.err.println("polygon = " + poly);
+            return (IOrientableSurface) poly;
+        }).toList();
+    }
+
+    private static double averageHeight(GM_Polygon p) {
+        List<IDirectPosition> list = p.getExterior().coord().getList();
+        PlanEquation pe = new ApproximatedPlanEquation(p);
+        Vecteur normal = pe.getNormale().getNormalised();
+        System.err.println(normal.getX() + ", " + normal.getY() + ", " + normal.getZ());
+        list.remove(list.size() - 1);
+        return list.stream().map(c -> c.getZ()).collect(Collectors.summingDouble(Double::doubleValue)) / list.size();
+    }
+
+    record BuildingFace(IOrientableSurface surface, double height) {
+    };
+
+    private static BuildingFace getRoofFromCuboid(List<IOrientableSurface> list) {
+        return list.stream().map(f -> new BuildingFace(f, averageHeight((GM_Polygon) f)))
+                .max((o1, o2) -> Double.compare(o1.height, o2.height)).get();
+    }
+
+    private static Double roundUp(Double v) {
+        return Long.valueOf(Math.round(v * 10)).doubleValue() / 10;
+    }
+
+    private static GM_Polygon roundPolygon(GM_Polygon p) {
+        List<IDirectPosition> coords = p.getExterior().coord().stream().map(
+                c -> new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(c.getX(), c.getY(), roundUp(c.getZ())))
+                .collect(Collectors.toList());
+        return new GM_Polygon(new GM_LineString(coords));
+    }
+
+    private static List<IOrientableSurface> getRoofSurfaces(List<IOrientableSurface> list) {
+        return list.stream().flatMap(p -> {
             PlanEquation pe = new ApproximatedPlanEquation(p);
             Vecteur normal = pe.getNormale().getNormalised();
-            System.err.println(normal.getX() + ", " + normal.getY() + ", " + normal.getZ());
-            list.remove(list.size() - 1);
-            return list.stream().map(c -> c.getZ()).collect(Collectors.summingDouble(Double::doubleValue)) / list.size();
-        }
-    
-        record BuildingFace(IOrientableSurface surface, double height) {
-        };
-    
-        private static BuildingFace getRoofFromCuboid(List<IOrientableSurface> list) {
-            return list.stream().map(f -> new BuildingFace(f, averageHeight((GM_Polygon) f)))
-                    .max((o1, o2) -> Double.compare(o1.height, o2.height)).get();
-        }
-    
-        private static Double roundUp(Double v) {
-            return Long.valueOf(Math.round(v * 10)).doubleValue() / 10;
-        }
-    
-        private static GM_Polygon roundPolygon(GM_Polygon p) {
-            List<IDirectPosition> coords = p.getExterior().coord().stream().map(
-                    c -> new fr.ign.cogit.geoxygene.spatial.coordgeom.DirectPosition(c.getX(), c.getY(), roundUp(c.getZ())))
-                    .collect(Collectors.toList());
-            return new GM_Polygon(new GM_LineString(coords));
-        }
+            return (normal.getZ() > 0.1) ? Stream.of(p) : Stream.empty();
+        }).toList();
+    }
 
-        private static List<IOrientableSurface> getRoofSurfaces(List<IOrientableSurface> list) {
-            return list.stream().flatMap(p -> {
-                PlanEquation pe = new ApproximatedPlanEquation(p);
-                Vecteur normal = pe.getNormale().getNormalised();
-                return (normal.getZ() > 0.1) ? Stream.of(p) : Stream.empty();
-            }).toList();
-        }
+    private static List<IOrientableSurface> getAggregatedRoofs(List<IOrientableSurface> list) {
+        Map<Double, List<IOrientableSurface>> grouped = list.stream()
+                .collect(Collectors.groupingBy(p -> p.coord().get(0).getZ()));
+        return grouped.values().stream().flatMap(l -> unionToStream(l)).toList();
+    }
 
-        private static List<IOrientableSurface> getAggregatedRoofs(List<IOrientableSurface> list) {
-            Map<Double, List<IOrientableSurface>> grouped = list.stream().collect(Collectors.groupingBy(p -> p.coord().get(0).getZ()));
-            return grouped.values().stream().flatMap(l -> unionToStream(l)).toList();
+    @SuppressWarnings("unchecked")
+    private static Stream<IOrientableSurface> unionToStream(List<IOrientableSurface> l) {
+        IGeometry union = JtsAlgorithms.union(l);
+        if (IOrientableSurface.class.isInstance(union)) {
+            return Stream.of((IOrientableSurface) union);
         }
-    
-        @SuppressWarnings("unchecked")
-        private static Stream<IOrientableSurface> unionToStream(List<IOrientableSurface> l) {
-            IGeometry union = JtsAlgorithms.union(l);
-            if (IOrientableSurface.class.isInstance(union)) {
-                return Stream.of((IOrientableSurface) union);
-            }
-            if (IMultiSurface.class.isInstance(union)) {
-                return ((IMultiSurface<IOrientableSurface>) union).stream();
-            }
-            return Stream.empty();
+        if (IMultiSurface.class.isInstance(union)) {
+            return ((IMultiSurface<IOrientableSurface>) union).stream();
         }
-    
-        public static void main(String[] args) throws CityGMLWriteException, JAXBException, CityGMLContextException {
-            String outputFolder = "./output_roof/";
-            // String outputFolder = "./output/";
-            IPopulation<IFeature> exported = ShapefileReader.read(outputFolder + "out.shp");
-            System.out.println("ALL DONE! " + (outputFolder + "out.shp"));
-            File folder = new File(App.class.getClassLoader().getResource("munich_full/").getPath());
-            IFeatureCollection<IFeature> fensters = Loader.readShapefile(new File(folder, "fenster.shp"));
-    
-            CityGMLContext context = CityGMLContext.newInstance();
-    
-            CityGMLVersion version = CityGMLVersion.v2_0;
-            CityGMLOutputFactory out = context.createCityGMLOutputFactory(version);
-            // CityGMLOutputFactory out =
-            // context.createCityGMLBuilder().createCityGMLOutputFactory(version);
-            // CityModel city = new CityModel();
-            idCreator = DefaultIdCreator.getInstance();
+        return Stream.empty();
+    }
+
+    public static void main(String[] args) throws CityGMLWriteException, JAXBException, CityGMLContextException {
+        String outputFolder = "./output_roof/";
+        double roofAngleInDegrees = 40.0;
+        // we have to do the 90° - angle trick because of camp skeleton
+        ExportAsCityGML.roofAngle = (90.0-roofAngleInDegrees) * Math.PI / 180.0;
+        // String outputFolder = "./output/";
+        IPopulation<IFeature> exported = ShapefileReader.read(outputFolder + "out.shp");
+        System.out.println("ALL DONE! " + (outputFolder + "out.shp"));
+        File folder = new File(App.class.getClassLoader().getResource("munich_full/").getPath());
+        IFeatureCollection<IFeature> fensters = Loader.readShapefile(new File(folder, "fenster.shp"));
+
+        CityGMLContext context = CityGMLContext.newInstance();
+
+        CityGMLVersion version = CityGMLVersion.v2_0;
+        CityGMLOutputFactory out = context.createCityGMLOutputFactory(version);
+        // CityGMLOutputFactory out =
+        // context.createCityGMLBuilder().createCityGMLOutputFactory(version);
+        // CityModel city = new CityModel();
+        idCreator = DefaultIdCreator.getInstance();
         factory = GeometryFactory.newInstance().withIdCreator(idCreator);
         List<Building> outBuildings = new ArrayList<>();
         // MyGeometryVisitor visitor = new MyGeometryVisitor();
@@ -320,7 +325,8 @@ public class ExportAsCityGML {
             if (union != null) {
                 Building building = new Building();
                 List<IOrientableSurface> list = ((GM_Solid) union).getFacesList();
-                final List<IOrientableSurface> newList = new ArrayList<>(list);;
+                final List<IOrientableSurface> newList = new ArrayList<>(list);
+                ;
                 if (roofShape.equals("SD")) {
                     // gable roof
                     System.err.println("longestEdge = " + longestEdge);
@@ -330,7 +336,8 @@ public class ExportAsCityGML {
                     System.err.println("roof = " + roofSurfaces.size());
                     roofSurfaces.forEach(p -> System.err.println("roof = (" + newList.indexOf(p) + ") = " + p));
                     // newList.removeAll(roofSurfaces);
-                    newList.forEach(p -> System.err.println("test1 = (" + new JtsAlgorithms().equals(p, roofSurfaces.get(0)) + ") = " + p));
+                    newList.forEach(p -> System.err
+                            .println("test1 = (" + new JtsAlgorithms().equals(p, roofSurfaces.get(0)) + ") = " + p));
 
                     newList.forEach(p -> {
                         try {
@@ -339,7 +346,8 @@ public class ExportAsCityGML {
                             e.printStackTrace();
                         }
                     });
-                    org.locationtech.jts.geom.GeometryFactory fact = new org.locationtech.jts.geom.GeometryFactory(new PrecisionModel(), newList.get(0).getCRS());
+                    org.locationtech.jts.geom.GeometryFactory fact = new org.locationtech.jts.geom.GeometryFactory(
+                            new PrecisionModel(), newList.get(0).getCRS());
                     newList.forEach(p -> {
                         try {
                             System.err.println("test3 = (" + AdapterFactory.toGeometry(fact, p, false));
@@ -350,28 +358,30 @@ public class ExportAsCityGML {
                     newList.forEach(p -> {
                         try {
                             System.err.println("test4 = (" + fact.createPolygon(
-                                (org.locationtech.jts.geom.LinearRing) AdapterFactory.toGeometry(fact,
-                                    ((IPolygon) p).getExterior(), false),
-                                AdapterFactory.toLinearRingArray(fact,
-                                    ((IPolygon) p).getInterior(), false)));
+                                    (org.locationtech.jts.geom.LinearRing) AdapterFactory.toGeometry(fact,
+                                            ((IPolygon) p).getExterior(), false),
+                                    AdapterFactory.toLinearRingArray(fact,
+                                            ((IPolygon) p).getInterior(), false)));
                         } catch (Exception e) {
                             e.printStackTrace();
                         }
                     });
                     System.err.println("test5");
                     newList.forEach(p -> {
-                        ((IPolygon) p).getExterior().coord().forEach(c->System.err.println(AdapterFactory.toCoordinate(c)));
+                        ((IPolygon) p).getExterior().coord()
+                                .forEach(c -> System.err.println(AdapterFactory.toCoordinate(c)));
                     });
                     System.err.println("test6");
                     newList.forEach(p -> {
-                        CoordinateSequence sequence = AdapterFactory.toCoordinateSequence(fact, ((IPolygon) p).getExterior().coord(), false);
-                        for (int i = 0 ; i < sequence.size() ; i++) {
+                        CoordinateSequence sequence = AdapterFactory.toCoordinateSequence(fact,
+                                ((IPolygon) p).getExterior().coord(), false);
+                        for (int i = 0; i < sequence.size(); i++) {
                             System.err.println(sequence.getCoordinate(i));
                         }
                         System.err.println(fact.createPolygon(sequence));
                     });
 
-                    roofSurfaces.forEach(roof->newList.remove(roof));//FIXME: floor is removed instead !???
+                    roofSurfaces.forEach(roof -> newList.remove(roof));// FIXME: floor is removed instead !???
                     System.err.println("list2 = " + newList.size());
                     newList.forEach(p -> System.err.println("list2 = (" + newList.indexOf(p) + ") = " + p));
                     final ILineString edge = longestEdge;
@@ -394,7 +404,8 @@ public class ExportAsCityGML {
                 // building.setLod2Solid(convert(solid));
                 convert(building, solid);
                 System.err.println(building.getLod2Solid());
-                // ((Solid) building.getLod2Solid().getObject()).getExterior().getObject().accept(visitor);
+                // ((Solid)
+                // building.getLod2Solid().getObject()).getExterior().getObject().accept(visitor);
                 // Envelope envelope = getEnvelope(union.envelope(), min, max);
                 // building.setBoundedBy(new BoundingShape(envelope));
                 Envelope envelope = building.computeEnvelope();
@@ -456,11 +467,11 @@ public class ExportAsCityGML {
 
     private static void convert(Building building, GM_Solid solid) {
         List<Polygon> polygons = new ArrayList<>();
-        solid.getFacesList().forEach(f->{
+        solid.getFacesList().forEach(f -> {
             IPolygon polygon = (IPolygon) f;
             PlanEquation pe = new ApproximatedPlanEquation(polygon.getExterior().coord());
             Vecteur normal = pe.getNormale().getNormalised();
-            Polygon p = factory.createPolygon(polygon.getExterior().coord().toArray3D(),3);
+            Polygon p = factory.createPolygon(polygon.getExterior().coord().toArray3D(), 3);
             if (normal.getZ() < 0) {
                 building.addBoundary(processBoundarySurface(new GroundSurface(), p));
             } else if (normal.getZ() > 0) {
@@ -471,11 +482,12 @@ public class ExportAsCityGML {
             polygons.add(p);
         });
         Shell shell = new Shell();
-        polygons.stream().map(p->new SurfaceProperty("#" + p.getId())).forEach(shell.getSurfaceMembers()::add);
+        polygons.stream().map(p -> new SurfaceProperty("#" + p.getId())).forEach(shell.getSurfaceMembers()::add);
         building.setLod2Solid(new SolidProperty(new Solid(shell)));
     }
-    
-    private static AbstractSpaceBoundaryProperty processBoundarySurface(AbstractThematicSurface thematicSurface, Polygon... polygons) {
+
+    private static AbstractSpaceBoundaryProperty processBoundarySurface(AbstractThematicSurface thematicSurface,
+            Polygon... polygons) {
         thematicSurface.setId(idCreator.createId());
         thematicSurface.setLod2MultiSurface(new MultiSurfaceProperty(factory.createMultiSurface(polygons)));
         return new AbstractSpaceBoundaryProperty(thematicSurface);
